fix header spacing

--- a/web/static/css/layouts/_home_layout.scss
+++ b/web/static/css/layouts/_home_layout.scss
@@ -38,5 +38,5 @@
   color: $white;
   font-size: $header-font-size;
   letter-spacing: .5em;
-  text-align: center;
+  margin-right: -.5em;
 }
